test/corpus/entity.txt
==================
Basic Comment
==================

// comment

---

(source_file
    (comment))

==================
Multiple Comments
==================

// comment 1
// comment 2

---

(source_file
    (comment)
    (comment))

==================
Single Entity Definition
==================

entity user {}

---

(source_file
    (entity_definition
        (identifier)
        (opening_brace)
        (closing_brace)))

==================
Multiple Entity Definition
==================

entity user {}

entity organization {}

---

(source_file
    (entity_definition
        (identifier)
        (opening_brace)
        (closing_brace))
    (entity_definition
        (identifier)
        (opening_brace)
        (closing_brace)))
